--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css"
     />
+    <!--FONTS-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <!--CSS-->
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -146,14 +153,30 @@
 
               <div class="informacoes-projeto">
                 <p>
-                  Projeto de um relogio de trabalho/descans utilizando HTML, CSS
-                  e Javascript.
+                  Projeto de um relogio de trabalho/descanso utilizando HTML,
+                  CSS e Javascript.
+                </p>
+                <p>🔗Ver no GitHub Pages</p>
+              </div>
+            </a>
+          </div>
+          <div class="projeto ativo">
+            <a href="#" target="_blank">
+              <img src="./src/images/Pomodoro2.png" alt="Projeto relogio 2" />
+              <h3>Projeto Relógio</h3>
+
+              <div class="informacoes-projeto">
+                <p>
+                  Projeto de um relogio de trabalho/descanso utilizando HTML,
+                  CSS e Javascript.
                 </p>
                 <p>🔗Ver no GitHub Pages</p>
               </div>
             </a>
           </div>
         </div>
+
+        <button class="btn-mostrar_mais">Mais</button>
       </section>
     </main>
     <footer></footer>
