Footer HTML Update

--- a/index.html
+++ b/index.html
@@ -179,6 +179,10 @@
         <button class="btn-mostrar_mais">Mais</button>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="copy">
+        Copyright &copy 2024 Irina Karadimova. Todos os direitos reservados.
+      </div>
+    </footer>
   </body>
 </html>
