--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
       rel="stylesheet"
     />
     <!--CSS-->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./src/css/reset.css" />
+    <link rel="stylesheet" href="./src/css/style.css" />
   </head>
   <body>
     <header class="cabecalho">
@@ -57,7 +58,7 @@
           </p>
           <p>Ah, também gosto de jogos, séries, animes e de ler.📗</p>
 
-          <ul>
+          <ul class="redes-sociais">
             <li>
               <a
                 href="#"
