--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 
       <nav class="menu">
         <ul>
-          <li><a href="#cv">Currículo</a></li>
-          <li><a href="#projetos">Projetos</a></li>
-          <li><a href="#contato">Contato</a></li>
+          <li><a href="#cv">currículo</a></li>
+          <li><a href="#projetos">projetos</a></li>
+          <li><a href="#contato">contato</a></li>
         </ul>
       </nav>
     </header>
@@ -102,7 +102,7 @@
                 src="./src/images/Sebastião_Alves_home.png"
                 alt="Projeto Sebastião Alves "
               />
-              <h3>Website Sebastião Alves</h3>
+              <h3>Projeto 1</h3>
 
               <div class="informacoes-projeto">
                 <p>
@@ -119,7 +119,7 @@
                 src="./src/images/My_Portfolio_dark.png"
                 alt="Projeto Portfolio versão 1"
               />
-              <h3>Projeto Portfólio v1</h3>
+              <h3>Projeto 2</h3>
 
               <div class="informacoes-projeto">
                 <p>
@@ -136,7 +136,7 @@
                 src="./src/images/My_Delicious_Restaurant.png"
                 alt="Projeto Restaurante"
               />
-              <h3>Website de Restaurante</h3>
+              <h3>Projeto 3</h3>
 
               <div class="informacoes-projeto">
                 <p>
@@ -150,7 +150,7 @@
           <div class="projeto ativo">
             <a href="#" target="_blank">
               <img src="./src/images/Pomodoro1.png" alt="Projeto relogio" />
-              <h3>Projeto Relógio</h3>
+              <h3>Projeto 4</h3>
 
               <div class="informacoes-projeto">
                 <p>
@@ -161,10 +161,10 @@
               </div>
             </a>
           </div>
-          <div class="projeto ativo">
+          <div class="projeto">
             <a href="#" target="_blank">
               <img src="./src/images/Pomodoro2.png" alt="Projeto relogio 2" />
-              <h3>Projeto Relógio</h3>
+              <h3>Projeto 5</h3>
 
               <div class="informacoes-projeto">
                 <p>
