--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <!--CSS-->
     <link rel="stylesheet" href="./src/css/reset.css" />
     <link rel="stylesheet" href="./src/css/style.css" />
+    <link rel="stylesheet" href="./src/css/responsive.css" />
   </head>
   <body>
     <header class="cabecalho">
@@ -185,5 +186,6 @@
         Copyright &copy 2024 Irina Karadimova. Todos os direitos reservados.
       </div>
     </footer>
+    <script src="./src/js/index.js"></script>
   </body>
 </html>
